feat: добавить загрузку шеринга и центрирование контента после зума.

--- a/ImageFeed/Presentation/Main/Base.lproj/Main.storyboard
+++ b/ImageFeed/Presentation/Main/Base.lproj/Main.storyboard
@@ -258,6 +258,12 @@
                                 </constraints>
                                 <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
                                 <state key="normal" image="Sharing"/>
+                                <userDefinedRuntimeAttributes>
+                                    <userDefinedRuntimeAttribute type="number" keyPath="layer.cornerRadius">
+                                        <integer key="value" value="25"/>
+                                    </userDefinedRuntimeAttribute>
+                                    <userDefinedRuntimeAttribute type="boolean" keyPath="layer.maskToBonds" value="YES"/>
+                                </userDefinedRuntimeAttributes>
                                 <connections>
                                     <action selector="didTapShareButton:" destination="BRN-Pq-288" eventType="touchUpInside" id="cOn-Gj-2Ac"/>
                                 </connections>
